# VideoDubber

./: .gitignore  README.md  pyproject.toml  videodubber_client.md
js/: README.md  package-lock.json  package.json
js/scripts/: sync-version.mjs
js/src/: cli.ts  client.ts  constants.ts  errors.ts  format-api-error.ts  index.ts  types.ts
scripts/: videodubber_client.py
src/videodubber/: __init__.py  __main__.py  _version.py  cli.py  client.py
