[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videodubber"
dynamic = ["version"]
description = "Official Python client for the VideoDubber.ai video translation API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]
authors = [
    { name = "VideoDubber", email = "contact@videodubber.ai" },
]
keywords = ["videodubber", "videodubber.ai", "translation", "dubbing", "api", "video", "video translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://videodubber.ai"
Documentation = "https://videodubber.ai/developers/"
Repository = "https://github.com/Souvic/VideoDubber"
Issues = "https://github.com/Souvic/VideoDubber/issues"
"API Reference" = "https://github.com/Souvic/VideoDubber/blob/main/videodubber_client.md"
Changelog = "https://pypi.org/project/videodubber/#history"

[project.scripts]
videodubber = "videodubber.cli:main"

[tool.hatch.version]
path = "src/videodubber/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/videodubber"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/videodubber_client.md",
]
